# continuum

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  Vagrantfile  configure
backends/python/: Pipfile  main.py  requirements.txt
backends/python/entries/: mallet_entries.py  mf_entries.py  ppr_entries.py  scikit_entries.py  test_entries.py  xgboost_entries.py
backends/python/modules/: constants.py  database.py  remote.py  rpc.py  state.py  utils.py  worker.py
backends/python/tests/: test_cost_aware.py  test_manual_policy.py  test_naive_best_effort.py  test_rpc.py  test_sp_best_effort.py  utils.py
docker/: BaseDockerfile  base.Dockerfile  build.Dockerfile  docker-compose-backend.yml  docker-compose-frontend.yml  docker-compose.yml
src/: CMakeLists.txt
src/frontends/: CMakeLists.txt
src/frontends/src/: data_frontend.hpp  data_frontend_main.cpp  data_frontend_tests.cpp  frontend_tests.cpp
src/libcontinuum/: CMakeLists.txt
src/libcontinuum/include/continuum/: config.hpp  constants.hpp  data_processor.hpp  datatypes.hpp  exceptions.hpp  json_util.hpp  logging.hpp  metrics.hpp  persistent_state.hpp  redis.hpp  retrain_policies.hpp  rpc_backend_service.hpp  selection_policies.hpp  timers.hpp  util.hpp
src/libcontinuum/src/: data_processor.cpp  datatypes.cpp  exceptions.cpp  json_util.cpp  logging.cpp  metrics.cpp  persistent_state.cpp  redis.cpp  retrain_policies.cpp  rpc_backend_service.cpp  selection_policies.cpp  task_executor.cpp  timers.cpp
src/libcontinuum/test/: base64_test.cpp  config_test.cpp  data_serialization_tests.cpp  json_util_test.cpp  logging_test.cpp  metrics_test.cpp  persistent_state_test.cpp  redis_test.cpp  test_main.cpp  timers_test.cpp
src/libs/: CMakeLists.txt
src/libs/patches/: rename_hiredis_symbol.patch  rename_libev_symbol.patch  rename_redox_symbol.patch
src/management/: CMakeLists.txt
src/management/src/: management_frontend.hpp  management_frontend_main.cpp  management_frontend_tests.cpp  management_tests.cpp
